@@ -9,6 +9,7 @@ xine-lib (1-beta11)
   * performance improvements (enabled ffmpeg direct rendering)
   * faster seeking
   * simple 10-band equalizer
+  * fix scaling of video with an aspect ratio not equal to one
 	
 xine-lib (1-beta10)
   * loading and displaying png images (e.g. for logos)
